--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,13 @@
   --background-rgb: 245, 245, 245;
 }
 
+html, body {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+  scroll-behavior: smooth;
+}
+
 body {
   color: rgb(var(--foreground-rgb));
   background: rgb(var(--background-rgb));
